Chaning images path

--- a/public/gadgets/skyView.html
+++ b/public/gadgets/skyView.html
@@ -174,19 +174,19 @@ function getColorIcon(color){
   var iconUrl;      
   switch(color){
     case "red":
-      iconUrl = "http://127.0.0.1/images/targetRed.png";
+      iconUrl = "http://ascot.astro.washington.edu/images/targetRed.png";
       break;
     case "green":
-      iconUrl = "http://127.0.0.1/images/targetGreen.png";
+      iconUrl = "http://ascot.astro.washington.edu/images/targetGreen.png";
       break;
     case "yellow":
-      iconUrl = "http://127.0.0.1/images/targetYellow.png";
+      iconUrl = "http://ascot.astro.washington.edu/images/targetYellow.png";
       break;
     case "blue":
-      iconUrl = "http://127.0.0.1/images/targetBlue.png";
+      iconUrl = "http://ascot.astro.washington.edu/images/targetBlue.png";
       break;
     default:
-      iconUrl = "http://127.0.0.1/images/targetGrey.png";
+      iconUrl = "http://ascot.astro.washington.edu/images/targetGrey.png";
       break;
   }
   return iconUrl
