--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -43,7 +43,6 @@ td{
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script> 
 <script src="/highcharts.src.js" type="text/javascript"></script>
-
 <script type="text/javascript">
 
 // Constants
@@ -123,12 +122,12 @@ gadget.loadState = function(state){
     selectedYAxis = state.selectedYAxis || selectedYAxis || false;
     selectedColor = state.selectedColor || selectedColor || "unselect";
   }  
-  updateGUI();
+  redraw();
 };
 
 gadget.update = gadget.loadState;
 
-function updateGUI(){
+function redraw(){
   var dataSetsList = gadget.dashboard.getDataSetList();
 
   if (dataSetsList.length > 0) {
